--- a/src/main/resources/com/example/calculadora/hello-view.fxml
+++ b/src/main/resources/com/example/calculadora/hello-view.fxml
@@ -48,7 +48,7 @@
             <Font size="24.0" />
          </font>
       </Button>
-      <Button id="whiteButton" onAction="#buttonEraseAction" fx:id="buttonClear" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="C" GridPane.columnIndex="2">
+      <Button id="whiteButton" onAction="#buttonEraseLower" fx:id="buttonClear" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="C" GridPane.columnIndex="2">
          <font>
             <Font size="24.0" />
          </font>
@@ -58,7 +58,7 @@
             <Font name="Calibri Bold" size="25.0" />
          </font>
       </Button>
-      <Button id="whiteButton" fx:id="buttonCancel" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="CE" GridPane.columnIndex="1">
+      <Button id="whiteButton" fx:id="buttonCancel" onAction="#buttonEraseAction" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="CE" GridPane.columnIndex="1">
          <font>
             <Font size="24.0" />
          </font>
@@ -118,7 +118,7 @@
             <Font name="Calibri Bold" size="25.0" />
          </font>
       </Button>
-      <Button id="equalButton" fx:id="buttonEqual" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4">
+      <Button id="equalButton" fx:id="buttonEqual" onAction="#equalButton" mnemonicParsing="false" prefHeight="72.0" prefWidth="72.0" text="=" GridPane.columnIndex="3" GridPane.rowIndex="4">
          <font>
             <Font name="Calibri Bold" size="25.0" />
          </font>
@@ -133,7 +133,7 @@
             <Font name="Calibri Bold" size="25.0" />
          </font>
       </Button>
-      <Button id="whiteButton" fx:id="perButton" alignment="CENTER" contentDisplay="CENTER" maxHeight="72.0" maxWidth="72.0" mnemonicParsing="false" text="\%" textAlignment="CENTER">
+      <Button id="whiteButton" fx:id="perButton" onAction="#percentage" alignment="CENTER" contentDisplay="CENTER" maxHeight="72.0" maxWidth="72.0" mnemonicParsing="false" text="\%" textAlignment="CENTER">
          <font>
             <Font size="24.0" />
          </font>
